--- a/project.html
+++ b/project.html
@@ -50,8 +50,9 @@
                 <li>landing page</li>
             </ul>
             <h3>A sample video</h3>
-            <iframe width="560" height="315" src="https://youtu.be/salY_Sm6mv4">
-            </iframe>
+            <video width="320" height="240" controls>
+                <source src="sample.mp4" type="video/mp4"
+            </video>
         </section>
         <!--Resume section-->
         <section id="Resume"></section>
