--- a/project.html
+++ b/project.html
@@ -51,7 +51,7 @@
             </ul>
             <h3>A sample video</h3>
             <video width="320" height="240" controls>
-                <source src="sample.mp4" type="video/mp4"
+                <source src="samplle.mp4" type="video/mp4"
             </video>
         </section>
         <!--Resume section-->
@@ -92,7 +92,7 @@
     <footer>
         <p>MY PORTFOLIO</p>
         <audio controls>
-            <source src="sample.mp3" type="audio/mp3">
+            <source src="samplle.mp3" type="audio/mp3">
         </audio>
     </footer>
     </body>
